Data sources / reference: Fix overflowing text

--- a/src/client/pages/Section/Descriptions/CommentableDescription/Description/DataSources/DataSources.scss
+++ b/src/client/pages/Section/Descriptions/CommentableDescription/Description/DataSources/DataSources.scss
@@ -23,3 +23,7 @@
     }
   }
 }
+
+.data-source__column-reference {
+  word-break: break-all;
+}
